Successfully converted from MCP to Official Mappings